--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -14,42 +14,20 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
 
     private var cacheTracker: CoreDataCacheTracker<{{ prefix }}{{ module_info.name }}ModuleDatabaseModel, {{ prefix }}{{ module_info.name }}ModuleEntityModel>?
     private var changes: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>] = [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]()
-    {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+    {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config == "true" -%}
                                                             config: {{ prefix }}{{ module_info.name }}InteractorConfig!
                                                             {%- else -%}
                                                             config: {{ prefix }}{{ module_info.name }}ModuleConfig!
                                                             {%- endif -%}{%- endif %}
-    {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-    private var services: {{ prefix }}{{ module_info.name }}RequiredServices { config.servicesFactory.servicesFor{{ prefix }}{{ module_info.name }} }
+    {% if custom_parameters.split_module_config == "true" -%}
+    private var services: {{ prefix }}{{ module_info.name }}InteractorServices { config.servicesFactory.servicesFor{{ prefix }}{{ module_info.name }} }
     {%- endif %}
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
-    {% if custom_parameters.extended_configure %}func configure(with {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-                                                                        config: {{ prefix }}{{ module_info.name }}InteractorConfig)
-                                                                        {%- else -%}
-                                                                        config: {{ prefix }}{{ module_info.name }}ModuleConfig)
-                                                                        {%- endif -%} {
-        assert(Thread.isMainThread)
-        {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-        assert(self.config == nil)
-        self.config = config
-        {%- else -%}
-        assert(self.config == nil)
-        self.config = config
-        {%- endif %}
-    }
-    {% else %}func configure() {
-        // TODO
-    }{% endif %}
+    {% include 'interactor_configure.swift' %}
 
-    func deinitialize() {
-        if isDeliveringModelsListChanges() {
-            stopDeliveringModelsListChanges()
-        }
-        // TODO: Place your code here
-        {% if custom_parameters.extended_configure %}self.config = nil{% endif %}
-    }
+    {% include 'interactor_deinitialize_cachetracker.swift' %}
 
     func isDeliveringModelsListChanges() -> Bool {
         return cacheTracker != nil
@@ -110,4 +88,9 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
 
     // MARK: - Helpers
     // TODO: Place your code here
+
+//    func someAction() {
+//        guard let output = output else { return }
+//        output.someInteractorAction()
+//    } 
 }
