--- a/Code/Interactor/interactor.tabbar.swift.liquid
+++ b/Code/Interactor/interactor.tabbar.swift.liquid
@@ -10,42 +10,28 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
 
     // MARK: - Vars
     
-    {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+    {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config == "true" -%}
                                                             config: {{ prefix }}{{ module_info.name }}InteractorConfig!
                                                             {%- else -%}
                                                             config: {{ prefix }}{{ module_info.name }}ModuleConfig!
                                                             {%- endif -%}{%- endif %}
-    {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-    private lazy var services: {{ prefix }}{{ module_info.name }}RequiredServices = { config.servicesFactory.servicesFor{{ prefix }}{{ module_info.name }} }()
+    {% if custom_parameters.split_module_config == "true" -%}
+    private lazy var services: {{ prefix }}{{ module_info.name }}InteractorServices = { config.servicesFactory.servicesFor{{ prefix }}{{ module_info.name }} }()
     {%- endif %}
                                                             
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
     
-    {% if custom_parameters.extended_configure %}func configure(with {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-                                                                        config: {{ prefix }}{{ module_info.name }}InteractorConfig)
-                                                                        {%- else -%}
-                                                                        config: {{ prefix }}{{ module_info.name }}ModuleConfig)
-                                                                        {%- endif -%} {
-        assert(Thread.isMainThread)
-        {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-        assert(self.config == nil)
-        self.config = config
-        {%- else -%}
-        assert(self.config == nil)
-        self.config = config
-        {%- endif %}
-    }
-    {% else %}func configure() {
-        // TODO
-    }{% endif %}
+    {% include 'interactor_configure.swift' %}
 
-    func deinitialize() {
-        // TODO: Place your code here
-        {% if custom_parameters.extended_configure %}self.environment = nil{% endif %}
-    }
+    {% include 'interactor_deinitialize.swift' %}
 
     var currentTab: {{ prefix }}{{ module_info.name }}ModuleTab = .exampleTab
 
     // MARK: - Helpers
     // TODO: Place your code here
+
+//    func someAction() {
+//        guard let output = output else { return }
+//        output.someInteractorAction()
+//    }     
 }
