--- a/Code/View/view_controller.embed.swift.liquid
+++ b/Code/View/view_controller.embed.swift.liquid
@@ -25,18 +25,14 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
         output.viewIsReady()
     }
 
-}
-
-extension {{ prefix }}{{ module_info.name }}ViewController {
-
-    // MARK: - UI Actions
+    // MARK: - Helpers
     // TODO: Place your code here
 
 }
 
 extension {{ prefix }}{{ module_info.name }}ViewController {
 
-    // MARK: - Helpers
+    // MARK: - UI Actions
     // TODO: Place your code here
 
 }
@@ -73,3 +69,34 @@ extension {{ prefix }}{{ module_info.name }}ViewController: {% if custom_paramet
     }
 
 }
+
+#if canImport(SwiftUI) && DEBUG && false // set to true, for preview using SwiftUI
+import SwiftUI
+
+fileprivate class {{ prefix }}{{ module_info.name }}ViewControllerFakeOutputForPreview: {{ prefix }}{{ module_info.name }}ViewOutput {
+    func viewIsReady() {}
+}
+
+@available(iOS 13.0, *)
+fileprivate struct {{ prefix }}{{ module_info.name }}ViewControllerRepresentable: UIViewControllerRepresentable {
+    func updateUIViewController(_ uiViewController: {{ prefix }}{{ module_info.name }}ViewController, context: Context) {}
+    func makeUIViewController(context: Context) -> {{ prefix }}{{ module_info.name }}ViewController {
+        let controller = {{ prefix }}{{ module_info.name }}ViewController()
+        controller.output = {{ prefix }}{{ module_info.name }}ViewControllerFakeOutputForPreview()
+        // TODO: Place your code here
+        return controller
+    }
+}
+
+@available(iOS 13.0, *)
+struct {{ prefix }}{{ module_info.name }}ViewController_Previews: PreviewProvider {
+    static var previews: some View {
+        {{ prefix }}{{ module_info.name }}ViewControllerRepresentable()
+            .preferredColorScheme(.light)
+            //.previewDevice("iPhone X")
+        //{{ prefix }}{{ module_info.name }}ViewControllerRepresentable()
+        //    .preferredColorScheme(.dark)
+        //    .previewDevice("iPhone 12")
+    }
+}
+#endif
