--- a/Tests/Presenter/presenter_tests.swift.liquid
+++ b/Tests/Presenter/presenter_tests.swift.liquid
@@ -44,6 +44,11 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
         // TODO: Place your code here
 
         // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
+
+        func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+
+        }
+
         // TODO: Place your code here
 
     }
