--- a/Code/View/view_controller.root_collectionview.swift.liquid
+++ b/Code/View/view_controller.root_collectionview.swift.liquid
@@ -1,10 +1,8 @@
 {% include 'header' %}
 
 import UIKit
-import CacheTracker
-import CacheTrackerConsumer
 
-class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController {
+class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewController {
 
     // MARK: - VIPER Vars
 
@@ -15,16 +13,15 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController {
 
     // MARK: - Vars
 
-    private let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
     private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
+    private let models = {{ prefix }}{{ module_info.name }}ModuleEntityModel.allCases
 
     // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
         setupContext()
-        setupTableView()
-        setupConsumer()
+        setupCollectioView()
         output.viewIsReady()
     }
 
@@ -43,33 +40,18 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController {
         )
     }
 
-    private func setupConsumer() {
-        consumer.delegate = self
-    }
-
-    private func setupTableView() {
+    private func setupCollectioView() {
         // TODO: Place your code here
     }
-
 }
 
 extension {{ prefix }}{{ module_info.name }}ViewController: {{ prefix }}{{module_info.name}}ViewInput {
 
+    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
+
     func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
         // TODO: Place your code here
     }
-
-    func loadInitialModelsList(_ state: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
-        consumer.reset(with: state)
-        tableView?.reloadData()
-    }
-
-    func applyModelsListChanges(_ changes: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
-        consumer.willChange()
-        consumer.consume(transactions: changes)
-        consumer.didChange()
-    }
-
 }
 
 extension {{ prefix }}{{ module_info.name }}ViewController {
@@ -81,19 +63,15 @@ extension {{ prefix }}{{ module_info.name }}ViewController {
 
 extension {{ prefix }}{{ module_info.name }}ViewController {
 
-    // MARK: - UITableViewDataSource
+    // MARK: - UICollectionViewDataSource
 
-    override func numberOfSections(in tableView: UITableView) -> Int {
-        return 1
+    override func collectionView(_ collectionView: UICollectionView, numberOfItemsInSection section: Int) -> Int {
+        return models.count
     }
 
-    override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
-        return consumer.numberOfItems()
-    }
-
-    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
-        let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
-        let model = consumer.object(at: indexPath.row)
+    override func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
+        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: "Default", for: indexPath) as! {{ prefix }}{{ module_info.name }}ViewCell
+        let model = models[indexPath.row]
         cell.configure(with: model, in: context)
         return cell
     }
@@ -102,22 +80,23 @@ extension {{ prefix }}{{ module_info.name }}ViewController {
 
 extension {{ prefix }}{{ module_info.name }}ViewController {
 
-    // MARK: - UITableViewDelegate
+    // MARK: - UICollectionViewDelegate
 
-    override func tableView(_ tableView: UITableView, willDisplay cell: UITableViewCell, forRowAt indexPath: IndexPath) {
+    override func collectionView(_ collectionView: UICollectionView, willDisplay cell: UICollectionViewCell, forItemAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
         cell.willDisplay()
     }
 
-    override func tableView(_ tableView: UITableView, didEndDisplaying cell: UITableViewCell, forRowAt indexPath: IndexPath) {
+    override func collectionView(_ collectionView: UICollectionView, didEndDisplaying cell: UICollectionViewCell, forItemAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
         cell.stopDisplay()
     }
 
-    override func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
+    override func collectionView(_ collectionView: UICollectionView, didSelectItemAt indexPath: IndexPath) {
         //let model = consumer.object(at: indexPath.row)
         // TODO: Place your code here
     }
+
 }
 
 #if canImport(SwiftUI) && DEBUG && false // set to true, for preview using SwiftUI
