--- a/Code/Interactor/interactor_input.swift.liquid
+++ b/Code/Interactor/interactor_input.swift.liquid
@@ -2,7 +2,7 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
+protocol {{ prefix }}{{ module_info.name }}InteractorInput: AnyObject {
     {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig){% else %}func configure(){% endif %}
     func deinitialize()
 }
