--- a/Code/Presenter/module_output.swift.liquid
+++ b/Code/Presenter/module_output.swift.liquid
@@ -1,5 +1,5 @@
 {% include 'header' %}
 
-protocol {{ prefix }}{{ module_info.name }}ModuleOutput: class {
+protocol {{ prefix }}{{ module_info.name }}ModuleOutput: AnyObject {
 
 }
