--- a/Code/View/root_view_delegate.swiftui.swift.liquid
+++ b/Code/View/root_view_delegate.swiftui.swift.liquid
@@ -1,6 +1,6 @@
 {% include 'header' %}
 
-protocol {{ prefix }}{{ module_info.name }}RootViewDelegate: class {
+protocol {{ prefix }}{{ module_info.name }}RootViewDelegate: AnyObject {
     
     func didTapOnSampleButton()
     
