--- a/Code/Presenter/module_input.mcflurry.tabbar.swift.liquid
+++ b/Code/Presenter/module_input.mcflurry.tabbar.swift.liquid
@@ -1,6 +1,6 @@
 {% include 'header' %}
 
-protocol {{ prefix }}{{ module_info.name }}ModuleInput: class {
+protocol {{ prefix }}{{ module_info.name }}ModuleInput: AnyObject {
 
     {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig){% else %}func configure(){% endif %}
     func setCurrent(_ tab: {{ prefix }}{{ module_info.name }}ModuleTab)
