--- a/Code/Router/router_input.mcflurry.tabbar.swift.liquid
+++ b/Code/Router/router_input.mcflurry.tabbar.swift.liquid
@@ -2,7 +2,7 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}RouterInput: class {
+protocol {{ prefix }}{{ module_info.name }}RouterInput: AnyObject {
 
     func embedTabs(_ module: [{{ prefix }}{{ module_info.name }}ModuleTab], current: {{ prefix }}{{ module_info.name }}ModuleTab?{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %})
 
